--- a/ASSETS/style.css
+++ b/ASSETS/style.css
@@ -4,10 +4,18 @@ header {
     font-family: "serif", "Times New Roman", "Times";
     float: left;
     text-align: center;
-    margin: "5px";
-    margin-left: "10px";
+    margin-bottom: "20px";
 }
 
 .nav {
-    @media (max-width: 640px) {  }
+    display: "inline";
+}
+
+.card {
+    padding-bottom: "20px";
+    text-decoration-color: "#ffffff";
+}
+
+h5 {
+    padding-bottom: "15px";
 }
